# o11yfleet-installers

./: .alexrc  .gitignore  .oxlintrc.json  .prettierignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CODE_STYLE.md  DEPLOY.md  DEVELOPING.md  DOCS_AUDIT_REPORT.md  README.md  TESTING.md  build.ts  eslint.config.mjs  justfile  knip.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml
.husky/: pre-commit
.playwright-cli/: page-2026-04-27T18-39-52-201Z.yml  page-2026-04-27T18-40-48-500Z.yml  page-2026-04-27T18-41-55-664Z.yml  page-2026-04-27T18-44-04-717Z.yml  page-2026-04-27T18-46-52-468Z.yml  page-2026-04-27T18-47-55-969Z.yml  page-2026-04-27T18-48-27-755Z.yml  page-2026-04-27T18-48-40-279Z.yml  page-2026-04-27T18-48-54-051Z.yml  page-2026-04-27T18-49-11-541Z.yml  page-2026-04-27T18-50-16-002Z.yml  page-2026-04-27T18-53-33-644Z.yml  page-2026-04-27T18-55-09-912Z.yml  page-2026-04-27T18-56-28-040Z.yml  page-2026-04-27T18-57-04-229Z.yml
configs/: basic-otlp.yaml  full-pipeline.yaml
crates/opamp-core/: Cargo.toml
crates/opamp-core/src/: lib.rs
docs/: README.md  admin-ops-model.md  ai-browser-context.md  ai-insight-quality.md  ai-next-steps.md  architecture.md  cloudflare-websocket-scaling.md  dev-loop.md  governance-model.md  live-collector-telemetry.md  pipeline-management-experiments.md  pipeline-management.md  portal-design-prompt.md  pricing-model.md  product-mental-model.md
experiments/: .gitkeep  package.json
infra/: CLOUDFLARE_SETUP.md
(+798 files in other folders)
