[package]
name = "o11y-opamp-core"
version = "0.1.0"
edition = "2021"
description = "OpAMP protocol implementation in Rust for WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Use shared proto types
o11y-opamp-proto = { path = "../opamp-proto" }
